--- a/2022.d/mooc.d/astro_system.d/astro_ss.tex
+++ b/2022.d/mooc.d/astro_system.d/astro_ss.tex
@@ -475,4 +475,24 @@
         \item Trojan asteroids look different spectroscopically from the majority of the asteroids in the main asteroid belt
     \end{itemize}\end{multicols}
 \end{enumerate}
+
+
+\newpage 
+
+\section*{Semaine 8 - Life in the solar system (week 1)}
+
+\begin{itemize}[label={$\bullet$}]
+    \item 4.01: Introduction to life
+    \item Discussion Prompt: Life as we do (or don't) know it
+    \item 4.02: Photosynthesis
+    \item 4.03: Water
+    \item 4.04: Alternative energy sources
+    \item 4.05: History of life on Earth
+    \item 4.06: Mars -- The Viking experiement
+    \item 4.07: Mars -- Microbial hitchhikers
+    \item 4.08: Mars -- Methane?
+    \item 4.09: Mars -- Methane!!
+    \item 4.10: Mars -- a habitable environment
+\end{itemize}
+
 \end{document}
