maj latex pour les mooc

--- a/2023.d/mooc.d/info_Go-1.tex
+++ b/2023.d/mooc.d/info_Go-1.tex
@@ -21,17 +21,40 @@ Learn the basics of Go, an open source programming language originally developed
 This first module gets you started with Go. You'll learn about the advantages of using Go and begin exploring the language's features. Midway through the module, you’ll take a break from "theory" and install the Go programming environment on your computer. At the end of the module, you'll write a simple program that displays “Hello, World” on your screen.
 
 \begin{itemize}[label={$\bullet$}]
-   \item  Module 1 Overview
-   \item  M1.1.1 - Why Should I Learn Go? (Advantages of Go)
-   \item  M1.1.2 - Objects
-   \item  M1.1.3 - Concurrency
-   \item  M1.2.1 - Installing Go
-   \item  M1.2.2 - Workspaces \& Packages
-   \item  M1.2.3 - Go Tool
-   \item  M1.3.1 - Variables
-   \item  M1.3.2 - Variable Initialization
-   \item Noté: Module 1 Activity: "Hello, world!"
-   \item Noté: Module 1 Quiz
+   \item Module 1 Overview
+   \item M1.1.1 - Why Should I Learn Go? (Advantages of Go)
+   \item M1.1.2 - Objects
+   \item M1.1.3 - Concurrency
+   \item M1.2.1 - Installing Go
+   \item M1.2.2 - Workspaces \& Packages
+   \item M1.2.3 - Go Tool
+   \item M1.3.1 - Variables
+   \item M1.3.2 - Variable Initialization
+   \item Noté : Module 1 Activity: "Hello, world!"
+   \item Noté : Module 1 Quiz
+\end{itemize}
+
+\newpage 
+
+\section*{Semaine 2 - Basic Data Types}
+
+Now that you’ve set up your programming environment and written a test program, you’re ready to dive into data types. This module introduces data types in Go and gives you practice writing routines that manipulate different kinds of data objects, including floating-point numbers and strings.
+
+\begin{itemize}[label={$\bullet$}]
+   \item Module 2 Overview
+   \item M2.1.1 - Pointers
+   \item M2.1.2 - Variable Scope
+   \item M2.1.3 - Deallocating Memory
+   \item M2.1.4 - Garbage Collection
+   \item M2.2.1 - Comments, Printing, Integers
+   \item M2.2.2 - Ints, Floats, Strings
+   \item M2.2.3 - String Packages
+   \item M2.3.1 - Constants
+   \item M2.3.2 - Control Flow
+   \item M2.3.3 - Control Flow, Scan
+   \item Noté : Module 2 Activity: trunc.go
+   \item Noté : Module 2 Activity: findian.go
+   \item Noté : Module 2 Quiz
 \end{itemize}
 
 
