dernière semaine final exam astro systeme solaire

--- a/2023.d/mooc.d/astro_Solar-System.tex
+++ b/2023.d/mooc.d/astro_Solar-System.tex
@@ -663,4 +663,160 @@ Calculate the answer in terms of Router, $R_{inner} / R_{outer}$ such that if th
 
 \end{enumerate}
 
+\section*{Semaine 10 - Final Exam}
+
+\begin{itemize}[label={$\bullet$}]
+    \item Reading: Bonus material
+    \item Bonus: The formation of the moon
+    \item Bonus: What we used to think about Sedna (before we knew about Planet Nine!)
+    \item Bonus: Seasons on Titan
+    \item Bonus: Why Pluto had to die
+    \item Noté: Final exam
+\end{itemize}
+
+\newpage
+
+\begin{enumerate}
+    \item[1.] It is possible, though still not certain, that Mars was once globally warmer and wetter, with liquid water globally stable at the surface during the Noachian.  If liquid water was once stable on Mars, most of the following statements are true. One is false. Find the false statement.
+    
+    \begin{itemize}[label={$\bullet$}]
+        \item The surface temperature was at least 0 degrees Celsius.
+        \item Rain was likely common, at least in some places.
+        \item Liquid water would also have been stable in the subsurface.
+        \item The giant outflow channels would have brought copious water into a northern ocean at this time.
+        \item Substantially more water was present in the atmosphere than is present today.
+        \item It is likely that a substantial $CO_2$ atmosphere caused a large greenhouse effect.
+    \end{itemize}
+
+    \item[2.] While it is not surprising the Mars has ice at the poles, there is evidence that subsurface ice on Mars extends even down to the tropics. Which one of the following is the likely explanation for this ice?
+
+    \begin{itemize}[label={$\bullet$}]
+        \item A colder equatorial climate during periods of high Martian obliquity.
+        \item Globally cold temperatures during the late Hesperian/early Amazonian as the atmospheric greenhouse diminished.
+        \item A colder equatorial climate during periods of high eccentricity.
+        \item Melting and migration of ground water due to magmatic interaction.
+        \item Remnant water from outflow channels which has slowly frozen over time.
+        \item Globally colder temperatures during the Noachian when the sun was fainter.
+    \end{itemize}
+
+    \item[3.] What is generally thought to be the most likely explanation for most giant outflow channels on Mars?
+    
+    \begin{itemize}[label={$\bullet$}]
+        \item Catastrophic flooding from locally intense rainfall.
+        \item The transition from high obliquity to low obliquity causing substantial melting and runoff.
+        \item Pre-Noachian impacts causing local regions of liquid water stability and ice melting.
+        \item Sapping of ground water.
+        \item Massive melting of ground ice by magmatic intrusion.
+        \item Melting of glacial dams leading to masive outflow of previously confined water.
+    \end{itemize}
+
+    \item[4.] If Mars once had a massive $CO_2$ atmosphere that led to a warmer and wetter Noachian period, all of that $CO_2$ must have gone somewhere. Most of the statements below about atmospheric removal on Mars are true. Which one of the following statements about atmospheric removal is not true?
+    
+    \begin{itemize}[label={$\bullet$}]
+        \item  If the Martian atmosphere was removed by hydrodynamic escape, all isotopes of atmospheric molecules would be removed equally well, contrary to what is observed.
+        \item If Mars still possessed a substantial magnetic field, its atmosphere would probably have been protected against loss.
+        \item Giant impacts during the late heavy bombardment could have been responsible for the drying out of the Hesperian, but all isotopes of atmospheric molecules would have been removed equally well, contrary to observations.
+        \item If the Martian atmosphere was removed by solar wind scavenging, lighter isotopes of atmospheric molecules would be preferentially removed  -- an effect which is seen.
+        \item Mars continues to lose its atmosphere today.
+        \item If $CO_2$ was removed chemically, large deposits of carbonates should exist somewhere, yet no such large deposits have been found.
+    \end{itemize}
+    
+    \item[5.] Place the following events in the likely order of their occurrence.
+    
+    \begin{itemize}[label={$\bullet$}]
+        \item 1. The presence of the acidic playa environment at Meridiani Planum.
+        \item 2. The formation of the Hellas basin.
+        \item 3. The formation of dendritic channels.
+        \item 4. The formation of the layers visible on the polar caps.
+    \end{itemize}
+    
+    \item[6.] We have learned about the interiors of giant planets through many different methods. Once again, most of the statements below are true, but one is not. Which statement below is not true?
+    
+    \begin{itemize}[label={$\bullet$}]
+        \item The primary measurement that the Juno spacecraft will make which will indicate whether or not Jupiter has a core will be of the gravitational field as close to Jupiter as possible.
+        \item Jupiter, Saturn, Uranus, and Neptune likely have metallic hydrogen in them, as evidenced by both the phase diagram and their magnetic fields.
+        \item With the exception of a few condensible species like water and helium, the composition of the atmosphere of Jupiter is likely almost identical to that measured in the upper layer by the Galileo probe.
+        \item If Jupiter were suddenly tripled in mass, it would get smaller.
+        \item Jupiter is more dense than Saturn only because it is more massive and thus more compressed.
+        \item Saturns interior is currently being heated by helium rain.
+    \end{itemize}
+    
+    \item[7.] We think that Jupiter most likely has a rock/ice core, but it is still possible that it doesn’t. The Juno spacecraft should give definitive measurements that will tell us. What is one of the conclusions that could be drawn if Jupiter is found to not have a core?
+    
+    \begin{itemize}[label={$\bullet$}]
+        \item Helium rainout has not yet begun on Jupiter.
+        \item Jupiter most likely formed in a manner substantially different from that of the other giant planets.
+        \item Jupiter is larger than it should be for a body without a core and thus must have undergone some form of inflation like hot Jupiters.
+        \item Jupiter could not have undergone the migration envisioned in the Grand Tack model.
+        \item The planets – at least in our solar system – most likely formed from direct collapse of the initial nebula.
+        \item Jupiter formed substantially later than the other giant planets.
+    \end{itemize}
+    
+    \item[8.] Which of the following statements about hot Jupiters is not true?
+    
+    \begin{itemize}[label={$\bullet$}]
+        \item Hot Jupiters have been discovered by both radial velocity surveys and transit surveys.
+        \item Hot Jupiters likely formed much further out from their parent star and migrated in to their current position.
+        \item Hot Jupiters likely have their rotation period locked to their orbital period such that one side always faces the sun, one side always faces away. 
+        \item The presence of Saturn might have saved Jupiter from becoming a hot Jupiter.
+        \item Planets smaller than Jupiter can also be found as close to their parent star as hot Jupiters.
+        \item Hot Jupiters can be substantially larger than Jupiter because the intense heat of the very nearby star inflates their upper atmospheres greatly.
+    \end{itemize}
+    
+    \item[9.] Why did objects in the asteroid belt region and the Kuiper belt region not grow into planets?
+    
+    \begin{itemize}[label={$\bullet$}]
+        \item The giant planets perturbed these regions, raising mutual velocities, preventing strong gravitational focusing and inhibiting run away growth.
+        \item Giant planet perturbations prevented dynamical friction from slowing the small bodies enough to be captured by larger, growing bodies.
+        \item Timescale for formation in these regions is longer. Accretion is still occurring. Given time, large bodies will grow.
+        \item The giant planets perturbed these regions such that planet-sized bodies forming had high enough eccentricities that they either impact the giant planet or the sun or were ejected from the solar system.
+        \item Not enough material was initially present to allow the formation of the initial oligarchs.
+        \item They did! Pluto is a planet! I insist!
+    \end{itemize}
+    
+    \item[10.] Most of the statements below about near Earth asteroid are true. Except for one. Find the false statement.
+    
+    \begin{itemize}[label={$\bullet$}]
+        \item Asteroids are delivered to the near Earth region through resonances in the main asteroid belt.
+        \item Near Earth asteroids are removed from the near Earth region on a timescale short compared to the age of the solar system.
+        \item The total number of near Earth asteroids is rapidly decreasing with time as they impact terrestrial planets or get ejected from the solar system.
+        \item Near Earth asteroids that land on the Earth provide evidence that small bodies differentiated, grew iron cores, and were shattered.
+        \item Small asteroids have their orbits changed by a combination of heating, rotation, and uneven reemission of heat.
+        \item Near Earth asteroids are replenished by collisions in the main asteroid belt.
+        \item The impact of a near Earth asteroid is likely to cause continental scale destruction on the Earth within the next few 100,000 years.
+    \end{itemize} 
+    
+    \item[11.] The Nice model is nice. What is the key aspect of this model 
+    
+    \begin{itemize}[label={$\bullet$}]
+        \item The Late Heavy Bombardment occurred 3.9 billion years ago.
+        \item The giant planets have migrated substantial distances.
+        \item The giant planets can achieve very low eccentricities and inclinations through migration.
+        \item Jupiter migrated inward in the gas disk.
+        \item Jupiter and Saturn entered a resonance which excited  their orbits and led to a solar system wide planetary rearrangement.
+        \item Mars is less massive than expected.
+    \end{itemize}
+    
+    compared to previous ideas about the evolution of the solar system?
+    \item[12.] Place the following events in order:
+
+    \begin{itemize}[label={$\bullet$}]
+        \item 1. The rise of archean microbes .
+        \item 2. The first photosynthetic microbes.
+        \item 3. The end of the Late Heavy Bombardment.
+        \item 4. The emergence of an oxygen rich atmosphere.
+    \end{itemize}
+
+
+    \item[13.] "Habitable zone" is a nice concept, even if one should not try to not take calculations of such things too literally. Below are mostly true statements about habitable zones. But one statement is not true. Which one is not true?
+
+    \begin{itemize}[label={$\bullet$}]
+        \item The "continuously habitable zone" is smaller than the "habitable zone."
+        \item For stars just a little fainter than the sun, the habitable zone is inside the region where planets will be tidally locked with one side always facing the star.
+        \item Because planets with atmospheres will have some amount of greenhouse warming, a habitable planet with liquid water stable on the surface could exist inside the simple boundary of our calculated habitable zone.
+        \item The transit of an earth-sized planet in the habitable zone of an M-dwarf would be easier to detect than that of an earth-sized planet in the habitable zone of a sun-like star (assume the two stars are equally bright in the sky).
+        \item Geological or biological feedback on planets can work to keep temperatures within a certain range even in the face of varying heat from the sun.
+    \end{itemize}
+\end{enumerate}
+
 \end{document}
