ajout semaine 2 mooc intro crypto

--- a/2023.d/mooc.d/info_Applied-Crypto-1.tex
+++ b/2023.d/mooc.d/info_Applied-Crypto-1.tex
@@ -43,5 +43,41 @@ In this module we present an introduction to cryptography, differentiate between
     \item Noté: Graded Assessment - Cryptographic Tidbits
 \end{itemize}
 
+\newpage
+
+
+
+\section*{Semaine 2 - cryptanalysis}
+
+
+
+Delving deeper into cryptanalysis, in this module we will discuss different types of attacks, explain frequency analysis and different use cases, explain the significance of polyalphabetical ciphers, and discuss the Vigenere Cipher. When you have completed this module, you will have an appreciation of the different types of attacks and under what kinds of situations each might be applicable.
+
+\subsection*{Objectifs d'apprentissage}
+
+\begin{itemize}[label={$\bullet$}]
+    \item Identify different types of cryptanalysis attacks.
+    \item Describe the single-character frequency analysis method of cryptanalysis.
+    \item Explain the multi-character frequency analysis method of cryptanalysis.
+    \item Apply the different frequency analysis methods of cryptanalysis.
+    \item Explain the significance of key length in polyalphabetic ciphers.
+    \item Demonstrate how to determine the key length for a polyalphabetic cipher.
+    \item Apply frequency analysis cryptanalysis methods to crack a Vigenere Cipher.
+\end{itemize}
+
+\subsection*{Lectures}
+
+
+\begin{itemize}[label={$\bullet$}]
+    \item L5 - Type of attacks
+    \item L6 - Frequency Analysis of Monoalphabetic Ciphers - Single-Character Frequencies
+    \item L7 - Multi-Character Frequency Analysis
+    \item L8 - Frequency Analysis for Monoalphabetic Ciphers - Example
+    \item L9 - Key Length Determination in Polyalphabetic Ciphers
+    \item L10 - Example of Cracking a Vigenere Cipher
+\end{itemize}
+
+\newpage
+
 
 \end{document}
